📑 Add fields on posts register

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "uuidv4": "^6.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
