--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "uuidv4": "^6.2.4"
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
