📦 ADD: Create AuthContext and useAuth to auth users

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "filesize": "^6.1.0",
     "firebase": "^7.22.1",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "styled-components": "^5.2.0",
     "uuid": "^8.3.1"
   },
